[package]
name = "tdu2_camera_fix"
version = "0.1.0"
edition = "2021"
 
[lib]
name = "version"
crate-type = ["cdylib"]
 
[dependencies]
windows-sys = { version = "0.59", features = [
  "Win32_Foundation",
  "Win32_System_Diagnostics_Debug",
  "Win32_System_LibraryLoader",
  "Win32_System_Memory",
  "Win32_System_Threading",
  "Win32_System_SystemServices",
] }
