[package]
name = "tdu2-runtime-patch"
version = "0.6.0"
edition = "2021"
build = "build.rs"
 
[lib]
name = "version"
crate-type = ["cdylib"]
 
[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
fern = "0.7"
log = "0.4"
windows-sys = { version = "0.59", features = [
  "Win32_Foundation",
  "Win32_System_Diagnostics_Debug",
  "Win32_System_LibraryLoader",
  "Win32_System_Memory",
  "Win32_System_Threading",
  "Win32_System_SystemServices",
] }
